k8s/ci-listener/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-listener-deployment
  labels:
    app: ci-listener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ci-listener
  template:
    metadata:
      labels:
        app: ci-listener
    spec:
      containers:
        - name: ci-listener
          image: "51.159.160.76:8081/utils/ci-listener"
          imagePullPolicy: Always
          ports:
            - name: ci-listener-http
              containerPort: 8888
