k8s/ci-listener/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ci-listener-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /ci-listener
            pathType: Prefix
            backend:
              service:
                name: ci-listener-service
                port:
                  number: 8888
